# mfa-admin

./: Makefile  docker-compose.yml
api/: api.sln
api/Mfa/: Mfa.csproj  Mfa.sln  Startup.cs  secrets.template.json
api/Mfa/template/: secrets.template.json
api/MfaAPI/Models/: User.cs
api/MfaApi/: .dockerignore  Dockerfile  MfaApi.csproj  MfaApi.sln  Program.cs  Startup.cs  appsettings.json
api/MfaApi.Tests/: MfaApi.Tests.csproj
api/MfaApi.UnitTests/: MfaApi.UnitTests.csproj
api/MfaApi/Migrations/: 20240822155354_InitialMigration.cs  (+14 more)
dashboard/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.js
dashboard-angular/: README.md  angular.json  app.config.ts  package-lock.json  package.json
dashboard/src/: constants.ts  middleware.ts
dashboard/templates/: .env.template
fastapi/: pyproject.toml
fastapi/app/: config.py  database.py  main.py
fastapi/app/api/: routers.py
fastapi/app/api/address/: constants.py  models.py  routers.py
fastapi/app/api/auth/: utils.py
fastapi/app/api/board_member/: constants.py  models.py  routers.py
fastapi/app/api/due/: constants.py  models.py  routers.py
fastapi/app/api/exchange/: constants.py  models.py  routers.py
fastapi/app/api/member/: models.py
fastapi/app/api/membership/: constants.py  models.py  repository.py  routers.py  schemas.py
fastapi/app/core/: api.py  pagination.py  sort.py
server/: Mfa.sln  MfaAPI.sln
server/Mfa/: Dockerfile  Mfa.csproj  Mfa.sln  MfaDb.cs  Program.cs  Startup.cs
server/Mfa.Tests/: Mfa.Tests.csproj  UnitTest1.cs
server/MfaAPI/: MfaAPI.sln
(+960 files in other folders)
